--- a/index.html
+++ b/index.html
@@ -1,11 +1,70 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jeia Jorolan Resume</title>
-  <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #ffe6f0;
+      color: #4a2c35;
+      margin: 0;
+      padding: 0;
+    }
+    .resume {
+      display: flex;
+      max-width: 900px;
+      margin: 40px auto;
+      background: #fff0f5;
+      box-shadow: 0 0 15px rgba(255, 105, 180, 0.3);
+      border-radius: 10px;
+      overflow: hidden;
+    }
+    .left-column {
+      width: 35%;
+      background-color: #ffb6c1;
+      padding: 20px;
+      color: #4a2c35;
+    }
+    .right-column {
+      width: 65%;
+      padding: 20px;
+    }
+    .profile-pic img {
+      width: 100%;
+      border-radius: 50%;
+      border: 4px solid #ff69b4;
+      margin-bottom: 15px;
+    }
+    h1 {
+      color: #ff1493;
+      margin-bottom: 5px;
+    }
+    h2 {
+      color: #ff69b4;
+      font-weight: normal;
+      margin-top: 0;
+    }
+    h3 {
+      color: #ff1493;
+      border-bottom: 2px solid #ffb6c1;
+      padding-bottom: 5px;
+      margin-bottom: 10px;
+    }
+    section {
+      margin-bottom: 20px;
+    }
+    ul {
+      padding-left: 20px;
+    }
+    li {
+      margin-bottom: 5px;
+    }
+    p {
+      margin: 5px 0;
+    }
+  </style>
 </head>
 <body>
   <div class="resume">
