--- a/index.html
+++ b/index.html
@@ -7,62 +7,90 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #ffe6f0;
+      background-color: #fff5f8;
       color: #4a2c35;
       margin: 0;
       padding: 0;
     }
+
     .resume {
       display: flex;
-      max-width: 900px;
+      max-width: 950px;
       margin: 40px auto;
-      background: #fff0f5;
-      box-shadow: 0 0 15px rgba(255, 105, 180, 0.3);
-      border-radius: 10px;
+      background: #ffffff;
+      box-shadow: 0 4px 20px rgba(255, 105, 180, 0.15);
+      border-radius: 15px;
       overflow: hidden;
     }
+
+    /* Left column with gradient pink */
     .left-column {
       width: 35%;
-      background-color: #ffb6c1;
+      background: linear-gradient(180deg, #ffb6c1, #ff8fb7);
       padding: 20px;
       color: #4a2c35;
     }
-    .right-column {
-      width: 65%;
-      padding: 20px;
-    }
+
+    /* Profile picture styling */
     .profile-pic img {
       width: 100%;
       border-radius: 50%;
-      border: 4px solid #ff69b4;
+      border: 4px solid #fff;
       margin-bottom: 15px;
+      box-shadow: 0 0 10px rgba(255, 105, 180, 0.4);
     }
+
+    /* Right column clean layout */
+    .right-column {
+      width: 65%;
+      padding: 30px;
+      background-color: #fffafc;
+    }
+
     h1 {
-      color: #ff1493;
+      color: #c71585;
       margin-bottom: 5px;
     }
+
     h2 {
       color: #ff69b4;
       font-weight: normal;
       margin-top: 0;
     }
+
     h3 {
-      color: #ff1493;
-      border-bottom: 2px solid #ffb6c1;
-      padding-bottom: 5px;
+      color: #c71585;
       margin-bottom: 10px;
+      padding: 5px 10px;
+      background-color: #ffe6ef;
+      border-radius: 8px;
+      display: inline-block;
     }
+
+    /* Card style sections */
     section {
       margin-bottom: 20px;
+      background: #fff;
+      padding: 15px;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(255, 182, 193, 0.2);
     }
+
     ul {
       padding-left: 20px;
     }
+
     li {
       margin-bottom: 5px;
     }
+
     p {
       margin: 5px 0;
+    }
+
+    /* Contact section tweak */
+    .contact p {
+      margin-bottom: 6px;
     }
   </style>
 </head>
@@ -79,7 +107,7 @@
       <div class="contact">
         <h3>CONTACT ME</h3>
         <p><strong>📞</strong> 09382943478</p>
-        <p><strong>📧</strong> jeacelyn14@gmail.com</p>
+        <p><strong>📧</strong> jacejelly41@gmail.com</p>
         <p><strong>📍</strong> 15<sup>th</sup> Aguinaldo St., Bacolod City</p>
       </div>
     </div>
