--- a/index.html
+++ b/index.html
@@ -2,147 +2,357 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Jeia Jorolan Resume</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Jeia Jorolan — Resume</title>
+
+  <!-- Professional fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #fff5f8;
-      color: #4a2c35;
-      margin: 0;
-      padding: 0;
+    :root{
+      /* Pink palette */
+      --pink-50:#fff5f8;
+      --pink-100:#ffe8ef;
+      --pink-200:#ffcddc;
+      --pink-300:#ff9fbf;
+      --pink-400:#ff79a6;
+      --pink-500:#ff4d8d;   /* primary */
+      --pink-600:#e2387b;
+      --pink-700:#c02d69;
+
+      --ink-900:#1e1b22;
+      --ink-700:#3a3440;
+      --ink-500:#625b68;
+      --ink-300:#9c93a3;
+      --surface:#ffffff;
+
+      --radius-lg:18px;
+      --radius-md:12px;
+      --shadow-1:0 10px 30px rgba(255,77,141,0.18), 0 4px 14px rgba(0,0,0,0.08);
+      --shadow-soft:0 6px 18px rgba(0,0,0,0.06);
+      --maxw:1080px;
     }
 
-    .resume {
-      display: flex;
-      max-width: 950px;
-      margin: 40px auto;
-      background: #ffffff;
-      box-shadow: 0 4px 20px rgba(255, 105, 180, 0.15);
-      border-radius: 15px;
-      overflow: hidden;
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0;
+      background:
+        radial-gradient(1200px 600px at 100% -10%, rgba(255,77,141,0.10), transparent 55%),
+        radial-gradient(800px 500px at -10% 100%, rgba(255,205,220,0.35), transparent 60%),
+        var(--pink-50);
+      color:var(--ink-900);
+      font-family:"Plus Jakarta Sans", system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji","Segoe UI Emoji", "Segoe UI Symbol";
+      line-height:1.6;
+      -webkit-font-smoothing:antialiased;
+      -moz-osx-font-smoothing:grayscale;
+      padding:24px;
     }
 
-    /* Left column with gradient pink */
-    .left-column {
-      width: 35%;
-      background: linear-gradient(180deg, #ffb6c1, #ff8fb7);
-      padding: 20px;
-      color: #4a2c35;
+    .resume{
+      max-width:var(--maxw);
+      margin:0 auto;
+      display:grid;
+      grid-template-columns: 340px 1fr;
+      gap:28px;
+      align-items:start;
     }
 
-    /* Profile picture styling */
-    .profile-pic img {
-      width: 100%;
-      border-radius: 50%;
-      border: 4px solid #fff;
-      margin-bottom: 15px;
-      box-shadow: 0 0 10px rgba(255, 105, 180, 0.4);
+    /* Card shells */
+    .card{
+      background:var(--surface);
+      border-radius:var(--radius-lg);
+      box-shadow:var(--shadow-1);
+      overflow:hidden;
     }
 
-    /* Right column clean layout */
-    .right-column {
-      width: 65%;
-      padding: 30px;
-      background-color: #fffafc;
+    /* Left column */
+    .left{
+      position:sticky;
+      top:24px;
+      align-self:start;
     }
 
-    h1 {
-      color: #c71585;
-      margin-bottom: 5px;
+    .profile-header{
+      background:linear-gradient(135deg, var(--pink-500), var(--pink-300));
+      padding:28px 24px 100px;
+      color:white;
+      position:relative;
+      overflow:hidden;
+    }
+    .profile-header::after{
+      content:"";
+      position:absolute;
+      inset:auto -30% -40% -30%;
+      height:300px;
+      background:radial-gradient(closest-side, rgba(255,255,255,0.35), transparent 70%);
+      transform:translateY(-20%);
+      filter:blur(20px);
     }
 
-    h2 {
-      color: #ff69b4;
-      font-weight: normal;
-      margin-top: 0;
+    .avatar-wrap{
+      position:absolute;
+      bottom:-56px;
+      left:24px;
+      display:flex;
+      align-items:flex-end;
+      gap:14px;
+    }
+    .avatar{
+      width:112px; height:112px;
+      border-radius:20px;
+      overflow:hidden;
+      border:4px solid white;
+      box-shadow:var(--shadow-soft);
+      background:#f8f8f8;
+    }
+    .avatar img{width:100%; height:100%; object-fit:cover; display:block;}
+
+    .name-role{
+      margin-left:150px;
+      padding-bottom:12px;
+    }
+    h1{
+      font-size:28px;
+      letter-spacing:0.4px;
+      margin:0 0 6px;
+      font-weight:800;
+    }
+    .role{
+      margin:0;
+      font-weight:600;
+      opacity:.95;
     }
 
-    h3 {
-      color: #c71585;
-      margin-bottom: 10px;
-      padding: 5px 10px;
-      background-color: #ffe6ef;
-      border-radius: 8px;
-      display: inline-block;
+    .left-body{
+      padding:84px 24px 24px;
+      display:grid;
+      gap:22px;
     }
 
-    /* Card style sections */
-    section {
-      margin-bottom: 20px;
-      background: #fff;
-      padding: 15px;
-      border-radius: 10px;
-      box-shadow: 0 2px 8px rgba(255, 182, 193, 0.2);
+    .section-title{
+      font-size:13px;
+      font-weight:800;
+      letter-spacing:.14em;
+      color:var(--pink-700);
+      margin:0 0 8px;
     }
 
-    ul {
-      padding-left: 20px;
+    .muted{color:var(--ink-500)}
+
+    .contact-list, .lang-list{
+      margin:0; padding:0; list-style:none; display:grid; gap:10px;
     }
 
-    li {
-      margin-bottom: 5px;
+    .contact-item{
+      display:grid; grid-template-columns:26px 1fr; align-items:start; gap:10px;
+      padding:10px 12px; border:1px solid var(--pink-100); border-radius:10px; background:#fff;
+    }
+    .contact-ico{font-size:18px; line-height:1}
+
+    .pill{
+      display:inline-block;
+      padding:6px 12px;
+      border-radius:999px;
+      background:var(--pink-100);
+      color:var(--pink-700);
+      font-weight:600;
+      font-size:12px;
+      margin:6px 6px 0 0;
+      border:1px solid var(--pink-200);
     }
 
-    p {
-      margin: 5px 0;
+    /* Right column */
+    .right{
+      display:grid;
+      gap:22px;
     }
 
-    /* Contact section tweak */
-    .contact p {
-      margin-bottom: 6px;
+    .about{
+      padding:22px 24px;
+      border-left:6px solid var(--pink-400);
+    }
+
+    .block{
+      padding:22px 24px;
+      border:1px solid var(--pink-100);
+      border-radius:var(--radius-md);
+      background:rgba(255,255,255,0.9);
+    }
+
+    .block h3{
+      margin:0 0 14px;
+      font-size:16px;
+      font-weight:800;
+      letter-spacing:.04em;
+      color:var(--ink-900);
+    }
+
+    /* Timeline */
+    .timeline{
+      position:relative;
+      margin-left:6px;
+      padding-left:18px;
+    }
+    .timeline::before{
+      content:""; position:absolute; left:6px; top:4px; bottom:4px; width:2px; background:linear-gradient(180deg,var(--pink-300),var(--pink-600));
+      border-radius:2px;
+    }
+    .t-item{
+      position:relative;
+      margin:0 0 16px 0;
+      padding-left:10px;
+    }
+    .t-item::before{
+      content:""; position:absolute; left:-15px; top:6px; width:10px; height:10px; background:white; border:2px solid var(--pink-500); border-radius:50%;
+    }
+    .t-title{font-weight:700}
+    .t-meta{font-size:12px; color:var(--ink-500); margin-top:2px}
+
+    /* Skills grid */
+    .skills{display:flex; flex-wrap:wrap; gap:8px}
+
+    /* Small helpers */
+    p{margin:0}
+    ul{margin:0 0 0 16px}
+    li{margin:6px 0}
+    a{color:var(--pink-700); text-decoration:none}
+    a:hover{text-decoration:underline}
+
+    /* Print */
+    @media print{
+      body{background:white; padding:0}
+      .card{box-shadow:none}
+      .left{position:static}
+    }
+
+    /* Responsive */
+    @media (max-width: 900px){
+      .resume{grid-template-columns:1fr}
+      .left{position:static}
+      .name-role{margin-left:140px}
+    }
+    @media (max-width: 520px){
+      .avatar{width:96px;height:96px}
+      .name-role{margin-left:124px}
+      h1{font-size:24px}
     }
   </style>
 </head>
+
 <body>
-  <div class="resume">
-    <div class="left-column">
-      <div class="profile-pic">
-        <img src="profile.jpg" alt="Jeia Jorolan" />
+  <main class="resume">
+
+    <!-- LEFT COLUMN -->
+    <aside class="left card">
+      <header class="profile-header">
+        <div class="avatar-wrap">
+          <div class="avatar">
+            <!-- Replace with your photo -->
+            <img src="profile.jpg" alt="Portrait of Jeia Jorolan">
+          </div>
+          <div class="name-role">
+            <h1>Jeia Jorolan</h1>
+            <p class="role">Student · Aspiring IT Professional</p>
+          </div>
+        </div>
+      </header>
+
+      <div class="left-body">
+        <section>
+          <h4 class="section-title">PROFILE</h4>
+          <p class="muted">
+            IT student who is responsible, organized, and eager to learn. Excited to gain first work experience and grow in tech.
+          </p>
+        </section>
+
+        <section>
+          <h4 class="section-title">CONTACT</h4>
+          <ul class="contact-list">
+            <li class="contact-item">
+              <span class="contact-ico">📞</span>
+              <span>0938 294 3478</span>
+            </li>
+            <li class="contact-item">
+              <span class="contact-ico">📧</span>
+              <span>jeacelyn14@gmail.com</span>
+            </li>
+            <li class="contact-item">
+              <span class="contact-ico">📍</span>
+              <span>15<sup>th</sup> Aguinaldo St., Bacolod City</span>
+            </li>
+          </ul>
+        </section>
+
+        <section>
+          <h4 class="section-title">LANGUAGES</h4>
+          <div class="lang-list">
+            <span class="pill">English</span>
+            <span class="pill">Tagalog</span>
+          </div>
+        </section>
       </div>
-      <div class="profile">
-        <h3>PROFILE</h3>
-        <p>IT student.<br>I consider myself a responsible and orderly person.<br>I am looking forward to my first work experience.</p>
+    </aside>
+
+    <!-- RIGHT COLUMN -->
+    <section class="right">
+
+      <div class="about block">
+        <p>
+          Passionate about customer experience and design. Comfortable with chat support,
+          basic branding, and layout work. Looking for opportunities where I can help teams and improve my skills.
+        </p>
       </div>
-      <div class="contact">
-        <h3>CONTACT ME</h3>
-        <p><strong>📞</strong> 09382943478</p>
-        <p><strong>📧</strong> jacejelly41@gmail.com</p>
-        <p><strong>📍</strong> 15<sup>th</sup> Aguinaldo St., Bacolod City</p>
+
+      <div class="block">
+        <h3>🎓 Education</h3>
+        <div class="timeline">
+          <div class="t-item">
+            <div class="t-title">STI West Negros University</div>
+            <div class="t-meta">Bachelor of Science in Information Technology · 2021–2025</div>
+          </div>
+        </div>
       </div>
-    </div>
 
-    <div class="right-column">
-      <h1>JEIA JOROLAN</h1>
-      <h2>Student</h2>
+      <div class="block">
+        <h3>🛠️ Skills</h3>
+        <div class="skills">
+          <span class="pill">Customer Service</span>
+          <span class="pill">Guest Relations</span>
+          <span class="pill">Online Chat Support</span>
+          <span class="pill">Branding Basics</span>
+          <span class="pill">Layout Design</span>
+          <span class="pill">Problem Solving</span>
+          <span class="pill">Teamwork</span>
+        </div>
+      </div>
 
-      <section>
-        <h3>🎓 EDUCATION</h3>
-        <p><strong>STI West Negros University</strong><br>
-        Bachelor of Science in Information Technology<br>
-        2021–2025</p>
-      </section>
+      <div class="block">
+        <h3>💼 Work Experience</h3>
+        <div class="timeline">
+          <div class="t-item">
+            <div class="t-title">Chat Support Representative</div>
+            <div class="t-meta">2025 – Present</div>
+            <p class="muted">Handled live chat, resolved customer issues, and kept high satisfaction scores.</p>
+          </div>
+          <div class="t-item">
+            <div class="t-title">Receptionist</div>
+            <div class="t-meta">2023 – 2025</div>
+            <p class="muted">Welcomed guests, managed bookings, and supported daily front desk operations.</p>
+          </div>
+        </div>
+      </div>
 
-      <section>
-        <h3>🌐 LANGUAGE</h3>
-        <p>English<br>Tagalog</p>
-      </section>
-
-      <section>
-        <h3>🛠️ SKILLS</h3>
+      <div class="block">
+        <h3>📂 Extras</h3>
         <ul>
-          <li>Customer Service & Guest Relations</li>
-          <li>Online Chat Support</li>
-          <li>Basic Branding & Layout Design</li>
+          <li>Open to internships and entry-level roles in IT or CX.</li>
+          <li>Comfortable with Google Workspace and basic design tools (e.g., Canva).</li>
+          <li>Able to work onsite or hybrid within Bacolod area.</li>
         </ul>
-      </section>
+      </div>
 
-      <section>
-        <h3>💼 WORK EXPERIENCE</h3>
-        <p><strong>2025 – Present</strong><br>Chat Support Representative</p>
-        <p><strong>2023 – 2025</strong><br>Receptionist</p>
-      </section>
-    </div>
-  </div>
+    </section>
+  </main>
 </body>
 </html>
