--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             </li>
             <li class="contact-item">
               <span class="contact-ico">📧</span>
-              <span>jeacelyn14@gmail.com</span>
+              <span>Jacejelly41@gmail.com</span>
             </li>
             <li class="contact-item">
               <span class="contact-ico">📍</span>
@@ -356,3 +356,4 @@
   </main>
 </body>
 </html>
+
