--- a/index.html
+++ b/index.html
@@ -248,11 +248,11 @@
       <header class="profile-header">
         <div class="avatar-wrap">
           <div class="avatar">
-            <!-- Replace with your photo -->
             <img src="profile.jpg" alt="Portrait of Jeia Jorolan">
           </div>
           <div class="name-role">
             <h1>Jeia Jorolan</h1>
+            <p class="role">Customer Experience Specialist</p>
             <p class="role">Student · Aspiring IT Professional</p>
           </div>
         </div>
@@ -356,4 +356,5 @@
   </main>
 </body>
 </html>
+
 
