--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
       <header class="profile-header">
         <div class="avatar-wrap">
           <div class="avatar">
-            <img src="profile.jpg" alt="Portrait of Jeia Jorolan">
+            <img src="hahaaha.jpg" alt="Portrait of Jeia Jorolan">
           </div>
           <div class="name-role">
             <h1>Jeia Jorolan</h1>
@@ -417,5 +417,6 @@
   </main>
 </body>
 </html>
+
 
 
